32.3.2 (23-11-2020)
- Bug Fix: Set CurrentPartyContact to null when deleting party contact #UL-FM-1968

32.3.1 (23-11-2020)
- Bug fix: Error accessing coordinator portal due to removal of bolonha type in degree type

32.3.0 (19-11-2020)
- Improvement: Support multiple sub-units with same name under same parent
- Bug fix: Fix broken back navigation from professorship creation
- Refactor: Remove deprecated relation between administrative office and campus

32.2.0 (18-11-2020)
- Bug fix: Prevent exception in ordering campus when none exists yet
- Refactor: Remove deprecated slot bolonha from degree type

32.1.0 (13-11-2020)
- Refactor: Cleanup deprecated attends methods
- Refactor: Cleanup deprecated degree slots
- Refactor: Cleanup deprecated degree and coordinator methods

32.0.2 (11-11-2020)
- Bug fix: Fix the unnecessary PersistentGroup creation

32.0.1 (10-11-2020)
- Refactor: Add methods to ensure API retro-compability

32.0.0 (10-11-2020)
- Refactor: Cleanup deprecated execution course slots
- Refactor: Cleanup deprecated execution course methods
- Refactor: Cleanup deprecated forum

31.0.0 (05-11-2020)
- Improvement: Show area slot of party contact in create/edit screens
- Refactor: Cleanup deprecated shift types
- Refactor: Cleanup deprecated curricular course slots
- Refactor: Remove deprecated method in school class 

30.12.0 (27-10-2020)
- Improvement: Delete degree message more explicit when blocker are curricular plans 
- Improvement: Add method WeekDay.getDayOfWeek()
- Refactor: Cleanup SchoolClass slot names in portuguese 
- Refactor: Cleanup Shift slot names in portuguese
- Refactor: Cleanup Lesson slot names in portuguese
- Fix: Shift custom name predicate when course sigla has square brackets

30.11.1 (20-10-2020)
- Fix: Changed Person related entities to allow delete method execution

30.11.0 (14-10-2020)
- New Feature: Added Health Card Number to Person according

30.10.0 (13-10-2020)