@@ -1,0 +1,11 @@
+package org.fenixedu.academic.domain.treasury;
+
+public interface ITreasuryCustomer {
+
+    public String getExternalId();
+
+    public String getFiscalCountry();
+    public String getFiscalNumber();
+    public String getUiFiscalNumber();
+    
+}
