@@ -1,0 +1,7 @@
+package org.fenixedu.academic.domain.treasury;
+
+public interface ITreasuryDebtAccount {
+
+    public String getExternalId();
+    
+}
