@@ -1,3 +1,5 @@
+- Refactor: Add interfaces and methods to get treasury customer and debt account
+
 32.3.2 (23-11-2020)
 - Bug Fix: Set CurrentPartyContact to null when deleting party contact #UL-FM-1968
 
